--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.8'
 
 services:
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:80"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+    networks:
+      - ecommerce_network
+
   api-gateway:
     build: ./api-gateway
     ports:
