--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     environment:
       - NODE_ENV=production
     depends_on:
-      api-gateway:
-        condition: service_healthy
+      - api-gateway
     networks:
       - ecommerce_network
 
