--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,15 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+      "@emotion/react": "^11.11.1",
+      "@emotion/styled": "^11.11.0",
+      "@mui/icons-material": "^5.14.0",
+      "@mui/material": "^5.14.0",
+      "@mui/styles": "^5.14.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "react-scripts": "5.0.1"
+      "react-scripts": "5.0.1",
+      "web-vitals": "^2.1.4"
     },
     "scripts": {
       "start": "react-scripts start",
@@ -15,7 +21,8 @@
     },
     "eslintConfig": {
       "extends": [
-        "react-app"
+        "react-app",
+        "react-app/jest"
       ]
     },
     "browserslist": {
